--- a/index.html
+++ b/index.html
@@ -1,54 +1,58 @@
 <html>
     <head>
-        <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         
-        <div class="container-fluid my-body">
-            <div class="row w-100 my-produto-box flex-row flex-nowrap ">
-                    <div class="col-4 my-produto-content">
-                        <img src="DESINCHA-NOITE_MOCKUP_direita-com-sache.png" alt="Desincha">
-                        <div style="width: 100%; height: 100%; background-color: red;">
-
-                        </div>
-                    </div>
-                    <div class="col-4 my-produto-content">
+        <div class="container-fluid my-body p-0 m-0">
+            <div class="row w-100 my-produto-box flex-row flex-nowrap p-0 m-0 ">
+                    <div class="col-4 my-produto-content p-0 m-0">
                         <img src="DESINCHA-NOITE_MOCKUP_direita-com-sache.png" alt="Desincha">
                     </div>
-                    <div class="col-4 my-produto-content">
+                    <div class="col-4 my-produto-content p-0 m-0">
                         <img src="DESINCHA-NOITE_MOCKUP_direita-com-sache.png" alt="Desincha">
                     </div>
-                    <div class="col-4 my-produto-content">
+                    <div class="col-4 my-produto-content p-0 m-0">
                         <img src="DESINCHA-NOITE_MOCKUP_direita-com-sache.png" alt="Desincha">
                     </div>
-                    <div class="col-4 my-produto-content">
+                    <div class="col-4 my-produto-content p-0 m-0">
                         <img src="DESINCHA-NOITE_MOCKUP_direita-com-sache.png" alt="Desincha">
                     </div>
-                    <div class="col-4 my-produto-content">
+                    <div class="col-4 my-produto-content p-0 m-0">
                         <img src="DESINCHA-NOITE_MOCKUP_direita-com-sache.png" alt="Desincha">
                     </div>
-                    <div class="col-4 my-produto-content">
+                    <div class="col-4 my-produto-content p-0 m-0">
                         <img src="DESINCHA-NOITE_MOCKUP_direita-com-sache.png" alt="Desincha">
                     </div>
-                    <div class="col-4 my-produto-content">
+                    <div class="col-4 my-produto-content p-0 m-0">
                         <img src="DESINCHA-NOITE_MOCKUP_direita-com-sache.png" alt="Desincha">
                     </div>
-                    <div class="col-4 my-produto-content">
+                    <div class="col-4 my-produto-content p-0 m-0">
+                        <img src="DESINCHA-NOITE_MOCKUP_direita-com-sache.png" alt="Desincha">
+                    </div>
+                    <div class="col-4 my-produto-content p-0 m-0">
                         <img src="DESINCHA-NOITE_MOCKUP_direita-com-sache.png" alt="Desincha">
                     </div>
                 </div>
             </div>
+            <div class="row w-100">
+                <div class="col-12 d-flex justify-content-center">
+                    <button id="ant" > Anterior</button>
+                    <button id="prox" class="ml-2"> Next</button>
+                </div>
+            </div>
         </div>
-
-        <script src="index.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        
+        <script
+            src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="index.js"></script>
     </body>
 </html>
